Setup home module

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <base href="/client/"><!--TODO: Using / as base.  Should use sub-app?-->
 
     <title>Hello World</title>
 
@@ -34,6 +35,9 @@
 
     <script type="text/javascript" src="app/app.module.js"></script>
     <script type="text/javascript" src="app/app.route.js"></script>
+    <script type="text/javascript" src="app/home/home.module.js"></script>
+    <script type="text/javascript" src="app/home/home.route.js"></script>
+    <script type="text/javascript" src="app/home/home.controller.js"></script>
 
 </body>
 </html>
