--- a/client/index.html
+++ b/client/index.html
@@ -39,15 +39,22 @@
 <!--Scripts-->
 <script type="text/javascript" src="vendor/angular/angular.js"></script>
 <script type="text/javascript" src="vendor/angular-route/angular-route.js"></script>
+<script type="text/javascript" src="vendor/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="vendor/angular-animate/angular-animate.js"></script>
 <script type="text/javascript" src="vendor/angular-aria/angular-aria.js"></script>
 <script type="text/javascript" src="vendor/angular-material/angular-material.js"></script>
 
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.route.js"></script>
+
 <script type="text/javascript" src="app/home/home.module.js"></script>
 <script type="text/javascript" src="app/home/home.route.js"></script>
 <script type="text/javascript" src="app/home/home.controller.js"></script>
+
+<script type="text/javascript" src="app/record/record.module.js"></script>
+<script type="text/javascript" src="app/record/record.route.js"></script>
+<script type="text/javascript" src="app/record/record.service.js"></script>
+<script type="text/javascript" src="app/record/record.controller.js"></script>
 
 </body>
 </html>
